feat: dockerize backend, add MongoDB to docker and combine the backend with MongoDB